KNOWN BUGS:
* Valgrind-2.1.X will interfere with writeactive, break fchmod. Use 2.0.
* The code sometimes uses timeout_client where it should use a server timeout.
|
Changes since 20040823b:
- Documentation: The texpire manual page was revised and updated.

20040823b: Changes since 20040823a:
- Bugfix: Fix assertion failure. The "failure" case was actually an
  expected failure and should not cause an abort. Thanks to Jack Raats.
- Documentation: fill in missing ChangeLog information.

20040823a: Changes since 20040818a:
- Bugfix: only_group_pcre now also applies to delaybody groups. Reported
  by Cory C. Albrecht.
- Bugfix: diagnose errors when getting articles marked for download
- Feature: new option timeout_delaybody. Suggested by Cory C. Albrecht.
- Change: delaybody article numbers are now stored with a time stamp
  rather than a retry count and subjected to timeout_delaybody,
  groupexpire or global expire timeouts.
- Cleanup: Make debug output of configuration parser consistent.
- Documentation: revise hostname documentation
- Documentation: revise filterfile manual page
- Documentation: add missing timeout_client documentation to manual
  page.

20040818a: Changes since 20040813a:
- Feature: forward ported the "noread" feature from leafnode-1,
  suggested by Cory C. Albrecht.
- Feature: Retry fetching bodies of delaybody articles only four times,
  then give up.

20040813a: Changes since 20040513a:
- Bugfix: texpire will now properly repair hard links of cross-posted
  articles. Bug reported by Jeff Grossman.
- Documentation: The extraneous "/leafnode" component was removed from
  the path names in the manual. Reported by Cory C. Albrecht.
- Cleanup: The code is now valid C and C++.

20040513a: Changes since 20040510a:
- Bugfix: fetchnews will try authentication when GROUP command replies 480.
- Bugfix: bogus "too few fields in DATE reply" in debug mode.
- Bugfix: plugged some memory leaks.
- Cleanup: fchmod bug report message revised to include "file