@@ -102,6 +102,7 @@ Michael Dreher <micha@planet-interkom.de>
 Michael Guertler <guertler@cs.bonn.edu>
 Michael Mauch <elmicha@unidui.uni-duisburg.de>
 Michael Mayer <mmayer@muenster.de>
+Michael Rulov <miha_root@aport2000.ru>
 Michael Schuetz <michael.schuetz@tu-clausthal.de>
 Michael Schwendt <sidplay@geocities.com>
 Michael Stroeder <s_stroed@ira.uka.de>
